deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment-np
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-app-np
  template:
    metadata:
      labels:
        app: my-app-np
    spec:
      containers:
        - name: my-container
          image: srikanth2233/damacharla11:20
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: my-app-np
  labels:
    app: my-app-np
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30020
      protocol: TCP
  selector:
    app: my-app-np
